# moai-hockeyapp-android

./: CMakeLists.txt  README  plugin.CMake
google-breakpad/: .gitignore  CMakeLists.txt
java_host_files/: HockeyAppHandler.java
java_host_files/net/hockeyapp/android/: NativeCrashManager.java
moai-hockeyapp-android/: CMakeLists.txt  HockeyAppJNI.cpp  HockeyAppJNI.h  host.cpp  host.h
